[workspace]
members = [
    "examples/basics",
    "examples/execd",
    "examples/ruby-sample",
    "libcnb",
    "libcnb-cargo",
    "libcnb-data",
    "libcnb-package",
    "libcnb-proc-macros",
    "libcnb-test",
    "libherokubuildpack",
    "test-buildpacks/readonly-layer-files",
    "test-buildpacks/sbom"
]

[workspace.package]
version = "0.10.0"
rust-version = "1.64"
edition = "2021"
license = "BSD-3-Clause"

[workspace.dependencies]
libcnb = { version = "0.10.0", path = "libcnb" }
libcnb-data = { version = "0.10.0", path = "libcnb-data" }
libcnb-package = { version = "0.10.0", path = "libcnb-package" }
libcnb-proc-macros = { version = "0.10.0", path = "libcnb-proc-macros" }
libcnb-test = { version = "0.10.0", path = "libcnb-test" }
