[workspace]
resolver = "2"
members = [
    "examples/basics",
    "examples/execd",
    "libcnb",
    "libcnb-cargo",
    "libcnb-common",
    "libcnb-data",
    "libcnb-package",
    "libcnb-proc-macros",
    "libcnb-test",
    "libherokubuildpack",
    "test-buildpacks/readonly-layer-files",
    "test-buildpacks/sbom",
    "test-buildpacks/store",
    "test-buildpacks/tracing",
]

[workspace.package]
version = "0.26.0"
rust-version = "1.76"
edition = "2021"
license = "BSD-3-Clause"

[workspace.lints.rust]
unreachable_pub = "warn"
unsafe_code = "warn"
unused_crate_dependencies = "warn"

[workspace.lints.clippy]
panic_in_result_fn = "warn"
# The explicit priority is required due to https://github.com/rust-lang/cargo/issues/13565.
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
# In most cases adding error docs provides little value.
missing_errors_doc = "allow"
# This lint is too noisy and enforces a style that reduces readability in many cases.
module_name_repetitions = "allow"

[workspace.dependencies]
libcnb = { version = "=0.26.0", path = "libcnb" }
libcnb-common = { version = "=0.26.0", path = "libcnb-common" }
libcnb-data = { version = "=0.26.0", path = "libcnb-data" }
libcnb-package = { version = "=0.26.0", path = "libcnb-package" }
libcnb-proc-macros = { version = "=0.26.0", path = "libcnb-proc-macros" }
libcnb-test = { version = "=0.26.0", path = "libcnb-test" }
toml = { version = "0.8.19" }
