[package]
name = "libcnb-cargo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Cargo command for managing buildpacks written with libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-cargo"
documentation = "https://github.com/heroku/libcnb.rs/blob/main/libcnb-cargo/README.md"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[[bin]]
name = "cargo-libcnb"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5.42", default-features = false, features = [
  "derive",
  "error-context",
  "help",
  "std",
  "usage",
] }
libcnb-data.workspace = true
libcnb-package.workspace = true
pathdiff = "0.2.3"
thiserror = "2.0.12"

[dev-dependencies]
libcnb-common.workspace = true
tempfile = "3.20.0"
