[package]
name = "libcnb-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Types for data formats specified in the Cloud Native Buildpack specification, used by libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-data"
documentation = "https://docs.rs/libcnb-data"
readme = "README.md"
include = ["src/**/*", "../LICENSE", "README.md"]

[dependencies]
fancy-regex = { version = "0.10.0", default-features = false }
libcnb-proc-macros.workspace = true
serde = { version = "1.0.139", features = ["derive"] }
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
serde_test = "1.0.139"
