[package]
name = "libcnb-data"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Types for data formats specified in the Cloud Native Buildpack specification, used by libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-data"
documentation = "https://docs.rs/libcnb-data"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
fancy-regex = { version = "0.13.0", default-features = false, features = ["std"] }
libcnb-proc-macros.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
thiserror = "1.0.57"
toml.workspace = true
uriparse = "0.6.4"

[dev-dependencies]
serde_test = "1.0.176"
