[package]
name = "libcnb-package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Library for cross-compiling and packaging buildpacks written with libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-package"
documentation = "https://docs.rs/libcnb-package"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
cargo_metadata = "0.23.0"
ignore = "0.4.23"
indoc = "2.0.6"
libcnb-common.workspace = true
libcnb-data.workspace = true
petgraph = { version = "0.8.2", default-features = false, features = ["std"] }
thiserror = "2.0.17"
uriparse = "0.6.4"
which = "8.0.0"
