[package]
name = "libcnb-proc-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros used within libcnb.rs"
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-proc-macros"
documentation = "https://docs.rs/libcnb-proc-macros"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lib]
proc-macro = true

[dependencies]
cargo_metadata = "0.15.4"
fancy-regex = { version = "0.11.0", default-features = false }
quote = "1.0.29"
syn = "2.0.23"
