[package]
name = "libcnb-proc-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Procedural macros used within libcnb.rs"
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-proc-macros"
documentation = "https://docs.rs/libcnb-proc-macros"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
cargo_metadata = "0.18.1"
fancy-regex = { version = "0.13.0", default-features = false, features = ["std"] }
quote = "1.0.37"
syn = { version = "2.0.76", features = ["full"] }
