[package]
name = "libcnb-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "An integration testing framework for buildpacks written with libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libcnb-test"
documentation = "https://docs.rs/libcnb-test"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
fastrand = "2.1.0"
fs_extra = "1.3.0"
libcnb-common.workspace = true
libcnb-data.workspace = true
libcnb-package.workspace = true
tempfile = "3.10.1"
thiserror = "1.0.59"

[dev-dependencies]
indoc = "2.0.5"
libcnb.workspace = true
ureq = { version = "2.9.7", default-features = false }
