[package]
name = "libcnb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A framework for writing Cloud Native Buildpacks in Rust"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs"
documentation = "https://docs.rs/libcnb"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lints]
workspace = true

[features]
trace = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-stdout",
]

[dependencies]
anyhow = { version = "1.0.94", optional = true }
cyclonedx-bom = { version = "0.8.0", optional = true }
libcnb-common.workspace = true
libcnb-data.workspace = true
libcnb-proc-macros.workspace = true
opentelemetry = { version = "0.24", optional = true }
opentelemetry_sdk = { version = "0.24", optional = true }
opentelemetry-stdout = { version = "0.5", optional = true, features = [
    "trace",
] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.6"
toml.workspace = true

[dev-dependencies]
serde_json = "1.0.133"
tempfile = "3.14.0"
