[package]
name = "libcnb"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "A framework for writing Cloud Native Buildpacks in Rust"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs"
documentation = "https://docs.rs/libcnb"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[lints]
workspace = true

[features]
trace = [
    "dep:opentelemetry",
    "opentelemetry/trace",
    "dep:opentelemetry_sdk",
    "opentelemetry_sdk/trace",
    "dep:opentelemetry-proto",
    "opentelemetry-proto/trace",
    "opentelemetry-proto/gen-tonic-messages",
    "opentelemetry-proto/with-serde",
    "dep:serde_json",
    "dep:tracing",
    "dep:tracing-opentelemetry",
    "dep:tracing-subscriber",
]

[dependencies]
anyhow = { version = "1.0.98", optional = true }
cyclonedx-bom = { version = "0.8.0", optional = true }
libcnb-common.workspace = true
libcnb-data.workspace = true
libcnb-proc-macros.workspace = true
opentelemetry = { version = "0.30.0", optional = true, default-features = false }
opentelemetry_sdk = { version = "0.30.0", optional = true, default-features = false }
opentelemetry-proto = { version = "0.30.0", optional = true, default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1", optional = true }
tracing-opentelemetry = { version = "0.31", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
toml.workspace = true

[dev-dependencies]
tempfile = "3.20.0"
serde_json = "1.0.142"
