[package]
name = "libherokubuildpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Opinionated common code for buildpacks implemented with libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libherokubuildpack"
documentation = "https://docs.rs/libherokubuildpack"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
default = ["command", "download", "digest", "error", "inventory", "log", "inventory-semver", "inventory-sha2", "tar", "toml", "fs", "write"]
download = ["dep:ureq", "dep:thiserror"]
digest = ["dep:sha2"]
error = ["log", "dep:libcnb"]
inventory = ["dep:hex", "dep:serde", "dep:thiserror", "dep:toml"]
inventory-semver = ["dep:semver"]
inventory-sha2 = ["dep:sha2"]
log = ["dep:termcolor"]
tar = ["dep:tar", "dep:flate2"]
toml = ["dep:toml"]
fs = ["dep:pathdiff"]
command = ["write", "dep:crossbeam-utils"]
write = []

[dependencies]
crossbeam-utils = { version = "0.8.21", optional = true }
# The default `miniz_oxide` flate2 backend has poor performance in debug/under QEMU:
# https://github.com/rust-lang/flate2-rs/issues/297
# Ideally we'd use the fastest `zlib-ng` backend, however it fails to cross-compile:
# https://github.com/rust-lang/libz-sys/issues/93
# As such we have to use the next best alternate backend, which is `zlib`.
flate2 = { version = "1.1.0", default-features = false, features = ["zlib"], optional = true }
hex = { version = "0.4.3", optional = true }
libcnb = { workspace = true, optional = true }
pathdiff = { version = "0.2.3", optional = true }
semver = { version = "1.0.25", features = ["serde"], optional = true }
serde = { version = "1.0.218", features = ["derive"], optional = true }
sha2 = { version = "0.10.8", optional = true }
tar = { version = "0.4.44", default-features = false, optional = true }
termcolor = { version = "1.4.1", optional = true }
thiserror = { version = "2.0.12", optional = true }
toml = { workspace = true, optional = true }
ureq = { version = "3.0.8", default-features = false, features = ["rustls"], optional = true }

[dev-dependencies]
serde_test = "1.0.177"
tempfile = "3.17.1"
