[package]
name = "libherokubuildpack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Opinionated common code for buildpacks implemented with libcnb.rs"
keywords = ["buildpacks", "CNB"]
repository = "https://github.com/heroku/libcnb.rs/tree/main/libherokubuildpack"
documentation = "https://docs.rs/libherokubuildpack"
readme = "README.md"
include = ["src/**/*", "LICENSE", "README.md"]

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true

[features]
bullet_stream = ["dep:bullet_stream"]
default = ["command", "digest", "error", "http", "inventory", "log", "inventory-semver", "inventory-sha2", "tar", "toml", "fs", "write"]
digest = ["dep:sha2"]
error = ["log", "dep:libcnb"]
http = ["dep:async-trait", "dep:bon", "dep:futures", "dep:http", "dep:reqwest", "dep:reqwest-middleware", "dep:reqwest-retry", "dep:reqwest-tracing", "dep:thiserror", "dep:tokio", "dep:tokio-util"]
inventory = ["dep:hex", "dep:serde", "dep:thiserror", "dep:toml"]
inventory-semver = ["dep:semver"]
inventory-sha2 = ["dep:sha2"]
log = ["dep:termcolor"]
tar = ["dep:tar", "dep:flate2"]
toml = ["dep:toml"]
fs = ["dep:pathdiff"]
command = ["write", "dep:crossbeam-utils"]
write = []

[dependencies]
async-trait = { version = "0.1.89", optional = true }
bon = { version = "3.7.2", optional = true }
bullet_stream = { version = "0.11.0", optional = true }
crossbeam-utils = { version = "0.8.21", optional = true }
# The default `miniz_oxide` flate2 backend has poor performance in debug/under QEMU:
# https://github.com/rust-lang/flate2-rs/issues/297
# Ideally we'd use the fastest `zlib-ng` backend, however it fails to cross-compile:
# https://github.com/rust-lang/libz-sys/issues/93
# As such we have to use the next best alternate backend, which is `zlib`.
flate2 = { version = "1.1.2", default-features = false, features = ["zlib"], optional = true }
futures = { version = "0.3.31", default-features = false, features = ["io-compat"], optional = true }
hex = { version = "0.4.3", optional = true }
http = { version = "1.3.1", optional = true }
libcnb = { workspace = true, optional = true }
pathdiff = { version = "0.2.3", optional = true }
reqwest = { version = "0.12.23", default-features = false, features = ["stream", "rustls-tls-native-roots"], optional = true }
reqwest-middleware = { version = "0.4.2", optional = true }
reqwest-retry = { version = "0.7.0", optional = true }
reqwest-tracing = { version = "0.5.8", optional = true }
semver = { version = "1.0.26", features = ["serde"], optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
sha2 = { version = "0.10.9", optional = true }
tar = { version = "0.4.44", default-features = false, optional = true }
termcolor = { version = "1.4.1", optional = true }
thiserror = { version = "2.0.12", optional = true }
toml = { workspace = true, optional = true }
tokio = { version = "1.47.1", default-features = false, features = ["rt-multi-thread", "time", "macros"], optional = true }
tokio-util = { version = "0.7.16", default-features = false, features = ["compat", "io"], optional = true }

[dev-dependencies]
hyper = "1.7.0"
hyper-util = "0.1.16"
indoc = "2.0.6"
serde_test = "1.0.177"
tempfile = "3.20.0"
wiremock = "0.6.5"
