[package]
name = "example-02-ruby-sample"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
flate2 = "1"
reqwest = { version = "0.10", features = ["blocking"] }
sha2 = "0.9"
tar = "0.4"
toml = "0.5"
tempfile = "3"
"libcnb" = { path = "../..", features = ["anyhow"] }
serde = "1.0.126"
openssl-sys = "*"

[features]
vendored-openssl = ["openssl-sys/vendored"]
