[package]
name = "examples-ruby-sample"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
flate2 = { version = "1.0.27", default-features = false, features = ["zlib"] }
libcnb.workspace = true
serde = "1.0.188"
sha2 = "0.10.7"
tar = { version = "0.4.40", default-features = false }
tempfile = "3.8.0"
ureq = { version = "2.7.1", default-features = false, features = ["tls"] }

[dev-dependencies]
libcnb-test.workspace = true
