[package]
name = "examples-ruby-sample"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
flate2 = { version = "1.0.28", default-features = false, features = ["zlib"] }
libcnb.workspace = true
serde = "1.0.192"
sha2 = "0.10.8"
tar = { version = "0.4.40", default-features = false }
tempfile = "3.8.1"
ureq = { version = "2.8.0", default-features = false, features = ["tls"] }

[dev-dependencies]
libcnb-test.workspace = true
