[package]
name = "example-02-ruby-sample"
version = "0.1.0"
authors = ["Terence Lee <hone02@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
anyhow = "1"
flate2 = "1"
ureq = "2.2.1"
sha2 = "0.9"
tar = "0.4"
toml = "0.5"
tempfile = "3"
"libcnb" = { path = "../..", features = ["anyhow"] }
serde = "1.0.126"
